--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["three.js", "audio", "visualizer", "3d"],
+  "keywords": [
+    "three.js",
+    "audio",
+    "visualizer",
+    "3d"
+  ],
   "author": "Liam Duggan",
   "license": "ISC",
   "dependencies": {
+    "lil-gui": "^0.20.0",
     "three": "^0.176.0"
   },
   "devDependencies": {
